--- a/.bundle/gems/nokogiri-1.6.6.4/ext/nokogiri/Makefile
+++ b/.bundle/gems/nokogiri-1.6.6.4/ext/nokogiri/Makefile
@@ -30,8 +30,8 @@ rubyhdrdir = $(includedir)/$(RUBY_VERSION_NAME)
 vendorarchdir = $(vendorlibdir)/$(sitearch)
 vendorlibdir = $(vendordir)/$(ruby_version)
 vendordir = $(rubylibprefix)/vendor_ruby
-sitearchdir = $(DESTDIR)./.gem.20160207-5376-65b8n7
-sitelibdir = $(DESTDIR)./.gem.20160207-5376-65b8n7
+sitearchdir = $(DESTDIR)./.gem.20160303-5274-1jnesn1
+sitelibdir = $(DESTDIR)./.gem.20160303-5274-1jnesn1
 sitedir = $(rubylibprefix)/site_ruby
 rubyarchdir = $(rubylibdir)/$(arch)
 rubylibdir = $(rubylibprefix)/$(ruby_version)
