--- a/.bundle/gems/sqlite3-1.3.11/ext/sqlite3/Makefile
+++ b/.bundle/gems/sqlite3-1.3.11/ext/sqlite3/Makefile
@@ -30,8 +30,8 @@ rubyhdrdir = $(includedir)/$(RUBY_VERSION_NAME)
 vendorarchdir = $(vendorlibdir)/$(sitearch)
 vendorlibdir = $(vendordir)/$(ruby_version)
 vendordir = $(rubylibprefix)/vendor_ruby
-sitearchdir = $(DESTDIR)./.gem.20160207-5376-1hcyd9l
-sitelibdir = $(DESTDIR)./.gem.20160207-5376-1hcyd9l
+sitearchdir = $(DESTDIR)./.gem.20160303-5274-bsradw
+sitelibdir = $(DESTDIR)./.gem.20160303-5274-bsradw
 sitedir = $(rubylibprefix)/site_ruby
 rubyarchdir = $(rubylibdir)/$(arch)
 rubylibdir = $(rubylibprefix)/$(ruby_version)
