--- a/.bundle/gems/thin-1.6.4/ext/thin_parser/Makefile
+++ b/.bundle/gems/thin-1.6.4/ext/thin_parser/Makefile
@@ -30,8 +30,8 @@ rubyhdrdir = $(includedir)/$(RUBY_VERSION_NAME)
 vendorarchdir = $(vendorlibdir)/$(sitearch)
 vendorlibdir = $(vendordir)/$(ruby_version)
 vendordir = $(rubylibprefix)/vendor_ruby
-sitearchdir = $(DESTDIR)./.gem.20160207-5376-1uh44rp
-sitelibdir = $(DESTDIR)./.gem.20160207-5376-1uh44rp
+sitearchdir = $(DESTDIR)./.gem.20160303-5274-c83a8u
+sitelibdir = $(DESTDIR)./.gem.20160303-5274-c83a8u
 sitedir = $(rubylibprefix)/site_ruby
 rubyarchdir = $(rubylibdir)/$(arch)
 rubylibdir = $(rubylibprefix)/$(ruby_version)
